opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler" ]
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/Chris00/ocaml-rope"
dev-repo: "git+https://github.com/Chris00/ocaml-rope.git"
bug-reports: "https://github.com/Chris00/ocaml-rope/issues"
doc: "https://Chris00.github.io/ocaml-rope/doc"
tags: [ "datastructure" ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "5.0"}
  "base-bytes"
  "dune"
  "benchmark" {with-test}
]
synopsis: "Ropes (heavyweight strings)"
description: """
Ropes ("heavyweight strings") are a scalable string implementation:
they are designed for efficient operation that involve the string as a
whole.  Operations such as concatenation, and substring take time that
is nearly independent of the length of the string.  Unlike strings,
ropes are a reasonable representation for very long strings such as
edit buffers or mail messages.
"""
